Don't put border around !TabButton close text [x] (shown in high contrast mode instead of icon).   It was causing unequal height of tabs.   Fixes #11180, refs #11155.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@23727 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1436,10 +1436,6 @@ DIV.dijitTabDisabled, .dj_ie DIV.dijitTabDisabled {
 	background-image: none !important;
 	width: auto !important;
 	height: auto !important;
-	border: thin dotted;	/* non-hover state */
-}
-.dijit_a11y .dijitTabCloseButtonHover {
-	border:thin solid;	/* hover state */
 }
 
 .dijit_a11y .dijitTabCloseText {
